@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-13T08:29:06Z",
-  "count" : 14,
+  "timestamp" : "2022-06-13T16:35:00Z",
+  "count" : 1,
   "count_minmax" : [ 1, 15 ],
-  "count_decinc" : [ -1, +15 ],
-  "uniques" : 7,
+  "count_decinc" : [ -14, +15 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "uniques_decinc" : [ -6, +7 ]
 }
