@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-13T08:29:06Z",
+  "timestamp" : "2022-06-13T16:35:00Z",
   "count_outdated" : 506,
   "uniques_outdated" : 285,
-  "count" : 632,
-  "uniques" : 327,
+  "count" : 620,
+  "uniques" : 322,
   "clones" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 14,
+      "count": 1,
       "count_minmax": [ 1, 15 ],
-      "uniques": 7,
+      "uniques": 1,
       "uniques_minmax": [ 1, 7 ]
     },
     {
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-12T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
