@@ -1,11 +1,11 @@
 {
-  "count": 126,
-  "uniques": 21,
+  "count": 114,
+  "uniques": 18,
   "clones": [
     {
       "timestamp": "2022-05-30T00:00:00Z",
-      "count": 14,
-      "uniques": 7
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-06-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
