@@ -1,3 +1,10 @@
+2022-06-13T16:35:00Z:
+* notice: last 14d: unq all: 18 114
+* notice: prev accum: outdated-unq outdated-all / unq all: 285 506 / 327 632
+* notice: next accum: outdated-unq outdated-all / unq all: 285 506 / 322 620
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -6 -13 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-05-30 2022-06-13]
+
 2022-06-13T08:29:06Z:
 * notice: last 14d: unq all: 21 126
 * notice: prev accum: outdated-unq outdated-all / unq all: 285 506 / 327 633
